fix horizontal scrolling on mobile

--- a/src/styles/GlobalStyles.scss
+++ b/src/styles/GlobalStyles.scss
@@ -78,6 +78,7 @@ body {
   transition: all 0.3s;
   height: 100%;
   overflow: visible;
+  overflow-x: hidden;
 }
 
 input,
